crates/ruff_python_parser/tests/snapshots/valid_syntax@async_for_statement.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/async_for_statement.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..30,
        body: [
            For(
                StmtFor {
                    node_index: NodeIndex(None),
                    range: 0..29,
                    is_async: true,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 10..16,
                            id: Name("target"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 20..24,
                            id: Name("iter"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 26..29,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 26..29,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
