crates/ruff_python_parser/tests/snapshots/valid_syntax@class_def_arguments.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/class_def_arguments.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..115,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 0..14,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 6..9,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 11..14,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 11..14,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 15..31,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 21..24,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 24..26,
                            node_index: NodeIndex(None),
                            args: [],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 28..31,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 32..72,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 38..41,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 41..67,
                            node_index: NodeIndex(None),
                            args: [
                                Generator(
                                    ExprGenerator {
                                        node_index: NodeIndex(None),
                                        range: 42..66,
                                        elt: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 43..47,
                                                id: Name("base"),
                                                ctx: Load,
                                            },
                                        ),
                                        generators: [
                                            Comprehension {
                                                range: 48..65,
                                                node_index: NodeIndex(None),
                                                target: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 52..56,
                                                        id: Name("base"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                iter: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 60..65,
                                                        id: Name("bases"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ifs: [],
                                                is_async: false,
                                            },
                                        ],
                                        parenthesized: true,
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 69..72,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 69..72,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 73..114,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 79..82,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 82..109,
                            node_index: NodeIndex(None),
                            args: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 83..108,
                                        value: Generator(
                                            ExprGenerator {
                                                node_index: NodeIndex(None),
                                                range: 84..108,
                                                elt: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 85..89,
                                                        id: Name("base"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                generators: [
                                                    Comprehension {
                                                        range: 90..107,
                                                        node_index: NodeIndex(None),
                                                        target: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 94..98,
                                                                id: Name("base"),
                                                                ctx: Store,
                                                            },
                                                        ),
                                                        iter: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 102..107,
                                                                id: Name("bases"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        ifs: [],
                                                        is_async: false,
                                                    },
                                                ],
                                                parenthesized: true,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 111..114,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 111..114,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
