crates/ruff_python_parser/tests/snapshots/valid_syntax@class_keyword_in_case_pattern.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/class_keyword_in_case_pattern.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..34,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..33,
                    subject: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 6..7,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..33,
                            node_index: NodeIndex(None),
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 18..28,
                                    node_index: NodeIndex(None),
                                    cls: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 18..23,
                                            id: Name("Class"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 23..28,
                                        node_index: NodeIndex(None),
                                        patterns: [],
                                        keywords: [
                                            PatternKeyword {
                                                range: 24..27,
                                                node_index: NodeIndex(None),
                                                attr: Identifier {
                                                    id: Name("x"),
                                                    range: 24..25,
                                                    node_index: NodeIndex(None),
                                                },
                                                pattern: MatchAs(
                                                    PatternMatchAs {
                                                        range: 26..27,
                                                        node_index: NodeIndex(None),
                                                        pattern: None,
                                                        name: Some(
                                                            Identifier {
                                                                id: Name("x"),
                                                                range: 26..27,
                                                                node_index: NodeIndex(None),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 30..33,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 30..33,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
