crates/ruff_python_parser/tests/snapshots/valid_syntax@class_type_params_py312.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/class_type_params_py312.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..96,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 44..95,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 50..53,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 53..90,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 54..69,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 54..55,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 57..69,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 58..61,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 63..68,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 71..79,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 71..72,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 74..79,
                                                    id: Name("float"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 81..84,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 82..84,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 86..89,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 88..89,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 92..95,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 92..95,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
